2007-10-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/Makefile.am: All test programs needs to be declared in
	ALL_TESTS

	Without this change, some reference files (*.ref) might not have
	been included in the distribution package when --without-lapack or
	--without-fft switch was used.

	* config/acx_fft.m4: Do not set blas_xxx_ok=yes when detecting FFT
	libraries

	This patch fixes FFT library detection macros, so they do not set
	blas_mkl_ok or blas_acml_ok variables. Without this fix, it might
	happened that even if BLAS detection was disabled (e.g. by using
	`--without-blas'), an ACML or MKL BLAS library was indicated as
	found.

	* config/acx_blas.m4, itpp/base/blas.h, itpp/base/vec.h,
	itpp/config_msvc.h: Fixed failing blas_test and vec_test when
	linking with MKL

	There was a problem with using zdotusub_ Fortran wrapper with
	Intel's MKL library, which resulted in segmentation faults in
	blas_test and vec_test programs. Now zdotusub_ is defined as
	zdotu_ when MKL BLAS is used, and zdotusub.f is not built in such
	a case. BTW, the detection of MKL, ACML and ATLAS BLAS libraries
	is improved (additional HAVE_BLAS_MKL, HAVE_BLAS_ACML and
	HAVE_BLAS_ATLAS definitions are available).

	* configure.ac, itpp/base/Makefile.am: Fixed linking problem with
	zdotu_ when not using BLAS

	If an external BLAS library is not used, do not compile and link
	the zdotusub_ Fortran wrapper, since it requires an external
	zdotu_ function to exist.

==============================================================================

2007-09-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 4.0.0-rc1 released (SVN tag: release-4-0-0-rc1)

	* NEWS: Updated to reflect recent changes

	* tests/itfile_test.cpp: Fixed a minor bug in itfile_test program

	This test program opened the reference data file from source
	directory in read/write mode, which was wrong, because source
	directory can be located on read-only file system. This patch
	fixes this bug.
